# darling

./: .gitignore  README.md  README.rst  h origin main  pack.py  pyproject.toml
.github/: pytest-linux-py310.yml
.github/workflows/: pytest-linux-py310.yml
Darling_example/: quickAnalysis.ipynb
assets/example_data/energy_scan_id03/: energy_scan_110_5pct_layer_0.h5  energy_scan_110_5pct_layer_1.h5
assets/example_data/mosa_scan_id03/: chi.npy  phi.npy
assets/saves/: energy_stack.h5  mosa_stack.h5
darling/: __init__.py  _color.py  _dataset.py  _peaksearcher.py  assets.py  metadata.py  peaksearcher.py  properties.py  reader.py
docs/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  serve_docs.py
docs/_sources/: index.rst.txt
docs/_static/: conf.py  example_s3dxrd.py  index.rst  installation.html  installation.md  raw_README.rst  test.css
docs/_static/examples/: example_get_uniform_powder_sample.py  example_init_detector.py  example_polycrystal_from_odf.py
docs/source/: conf.py  index.rst
tests/: test_assets.py  test_dataset.py  test_examples.py  test_peaksearcher.py  test_properties.py  test_reader.py  test_sphinx_examples.py
